added contacts in README

--- a/README
+++ b/README
@@ -6,3 +6,18 @@ This project is called “The World of SETI”, and its purpose is to give insig
 
 This project is open sourced through the GPL3. A copy of it is in this project directory.
 
+Contact Information
+
+Carnegie Mellon Silicon Valley
+Alan Mak - alan.mak@west.cmu.edu
+Anthony Tang - anthony.tang@west.cmu.edu
+Dia Kharrat - dia.kharrat@west.cmu.edu
+Paul Wong - paul.wong@west.cmu.edu
+
+SETI Institute Stakeholders
+Avinesh Agrawal - avinash@seti.org
+Jill Tarter - jtarter@seti.org
+Jon Richards - jrichards@seti.org
+
+Carnegie Mellon Faculty
+Ed Katz - ed.katz@west.cmu.edu
